Documentation edits made through Mintlify web editor

--- a/aifundamentals/naturallanguageprocessing/naturallanguageprocessing1.mdx
+++ b/aifundamentals/naturallanguageprocessing/naturallanguageprocessing1.mdx
@@ -2,3 +2,19 @@
 title: "Natural Language Processing"
 description: "Natural Language Processing (NLP) is a branch of Artificial Intelligence (AI) that focuses on enabling machines to understand, interpret, and generate human language. It bridges the gap between computers and human communication."
 ---
+
+## Core Purpose
+
+The primary purpose of NLP is to transform unstructured textual data into structured, actionable insights. It plays a vital role in enabling seamless human-computer interaction through natural language and in automating language-driven processes in business, healthcare, customer support, and more. NLP allows machines to extract key information, understand intent, analyze sentiment, and respond in ways that mimic human communication.
+
+## Key NLP Concepts
+
+### Text Processing Fundamentals
+
+Before any advanced NLP task can be performed, text must be preprocessed and cleaned.
+
+- **Sentence Segmentation**: The process of dividing text into individual sentences. This is an essential first step for tasks like summarization or sentiment analysis.
+- **Tokenization**: Breaking a sentence or paragraph into individual units called _tokens_ (e.g., words, phrases, punctuation). Tokens serve as the base input for all downstream NLP tasks.
+- **Text Normalization**: Standardizing the text by converting it to lowercase, removing punctuation, and correcting misspellings. This ensures consistency across data.
+- **Language Detection**: Identifying the language of the input text to route it through the correct processing pipeline.
+- **Encoding**: Converting text into numerical representations (e.g., word embeddings, one-hot vectors) so that machines can analyze and process it.
