Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -6,3 +6,7 @@ description: "Welcome!!"
 <Card title="AI Fundamentals" icon="robot" horizontal href="/aifundamentals/introduction">
   Learn fundamentals of **Artificial Intelligence.**
 </Card>
+
+<Card title="Python" icon="code" horizontal href="/python/introduction">
+  Learn Python Programming
+</Card>
