Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -3,7 +3,7 @@ title: "Introduction"
 description: "Welcome!!"
 ---
 
-<Card title="AI Fundamentals" icon="robot" horizontal href="/aifundamentals/introduction">
+<Card title="AI Fundamentals" icon="robot" horizontal={false} href="/aifundamentals/module1/page1">
   Learn fundamentals of **Artificial Intelligence.**
 </Card>
 
