Documentation edits made through Mintlify web editor

--- a/aifundamentals/module1/page1.mdx
+++ b/aifundamentals/module1/page1.mdx
@@ -2,4 +2,40 @@
 title: "What is AI?"
 ---
 
-Hello World!
+## Defining Artificial Intelligence: Beyond the Sci-Fi
+
+At its core, **Artificial Intelligence (AI)** is a broad field of computer science focused on a single, ambitious goal: building smart machines that can perform tasks that typically require human intelligence.
+
+When you hear "AI," your mind might jump to science fiction—sentient robots or super-intelligent computers. While that's the grand vision, the AI of today is more like a highly specialized assistant working behind the scenes. It's the engine that powers helpful, everyday technologies like virtual assistants (Siri, Alexa), the recommendation engine that knows what you want to watch next on Netflix, and the spam filter that keeps your inbox clean.
+
+Think of it this way: The ultimate goal is not necessarily to create a conscious machine, but to build systems that can **learn, reason, and adapt** to solve specific problems, often more efficiently and at a much greater scale than humans can.
+
+## The Primary Goals of AI
+
+AI isn't a single technology; it's a collection of different methods and objectives. To understand AI, it helps to understand what it's trying to _do_. Here are its primary goals:
+
+- **Reasoning:** The ability to use logic to solve problems.
+  - **Think about:** A sudoku puzzle. An AI can use logical reasoning to figure out where the numbers must go based on the rules of the game.
+- **Knowledge Representation:** The ability to store information about the world in a structured way that a computer can use.
+  - **Think about:** A self-driving car. It needs a "knowledge base" that tells it a red, octagonal sign with the letters S-T-O-P means it must come to a complete halt.
+- **Planning:** The ability to set a goal and determine the best sequence of steps to achieve it.
+  - **Think about:** A GPS app. When you enter a destination, it doesn't just know the route; it _plans_ the fastest one by considering traffic, road closures, and distance.
+- **Learning:** The ability to acquire new knowledge from data and improve over time without being explicitly reprogrammed. This is the cornerstone of modern AI and the foundation of Machine Learning.
+- **Natural Language Processing (NLP):** The ability to understand, interpret, and generate human language.
+  - **Think about:** Translation apps or chatbots. They need to grasp grammar, context, and slang to function correctly.
+- **Perception:** The ability to see, hear, and sense the world through data from sensors like cameras and microphones.
+  - **Think about:** Your phone's ability to unlock using your face. That's computer vision, a form of digital perception.
+
+## The Difference Between AI, Machine Learning, and Deep Learning
+
+The terms AI, Machine Learning (ML), and Deep Learning (DL) are often used interchangeably, but they have a clear relationship. The best way to understand them is as concentric circles or Russian nesting dolls, where each one is a part of the other.
+
+- **Artificial Intelligence (AI): The Outer Circle (The Big Idea)** This is the entire, all-encompassing concept of creating intelligent machines, first dreamed up in the 1950s. Any machine or program that exhibits some form of intelligence falls under the broad umbrella of AI.
+- **Machine Learning (ML): The Middle Circle (The Main Approach)** This is a **subset of AI** and the most common approach to achieving it today. Instead of writing explicit, step-by-step instructions for a task, ML involves "training" a system on large amounts of data, allowing it to **learn** patterns and make predictions on its own. Most modern AI applications are built using Machine Learning.
+- **Deep Learning (DL): The Inner Circle (The Advanced Technique)** This is a specialized **subset of Machine Learning**. Deep Learning uses complex, multi-layered structures called "neural networks," which are loosely inspired by the human brain. These networks are exceptionally good at finding intricate patterns in massive datasets, making them perfect for complex tasks like recognizing objects in photos or generating human-like text.
+
+### Key Takeaways
+
+- **AI** is the overall goal of making machines smart.
+- **Machine Learning** is the most common _method_ for achieving that goal by learning from data.
+- **Deep Learning** is a powerful _technique_ within Machine Learning that uses brain-like neural networks.
