--- a/aifundamentals/module1/page1.mdx
+++ b/aifundamentals/module1/page1.mdx
@@ -30,7 +30,13 @@ AI isn't a single technology; it's a collection of different methods and objecti
 
 The terms AI, Machine Learning (ML), and Deep Learning (DL) are often used interchangeably, but they have a clear relationship. The best way to understand them is as concentric circles or Russian nesting dolls, where each one is a part of the other.
 
-![image.png](/images/image.png)
+<img
+  src="/images/image.png"
+  alt="image.png"
+  title="image.png"
+  className="mx-auto"
+  style={{ width:"56%" }}
+/>
 
 - **Artificial Intelligence (AI): The Outer Circle (The Big Idea)** This is the entire, all-encompassing concept of creating intelligent machines, first dreamed up in the 1950s. Any machine or program that exhibits some form of intelligence falls under the broad umbrella of AI.
 - **Machine Learning (ML): The Middle Circle (The Main Approach)** This is a **subset of AI** and the most common approach to achieving it today. Instead of writing explicit, step-by-step instructions for a task, ML involves "training" a system on large amounts of data, allowing it to **learn** patterns and make predictions on its own. Most modern AI applications are built using Machine Learning.
