Documentation edits made through Mintlify web editor

--- a/aifundamentals/module1/page1.mdx
+++ b/aifundamentals/module1/page1.mdx
@@ -31,11 +31,11 @@ AI isn't a single technology; it's a collection of different methods and objecti
 The terms AI, Machine Learning (ML), and Deep Learning (DL) are often used interchangeably, but they have a clear relationship. The best way to understand them is as concentric circles or Russian nesting dolls, where each one is a part of the other.
 
 <img
-  src="/images/image.png"
-  alt="image.png"
-  title="image.png"
+  src="/images/aifundamentals/img1.png"
+  alt="Img1 Pn"
+  title="Img1 Pn"
   className="mx-auto"
-  style={{ width:"56%" }}
+  style={{ width:"53%" }}
 />
 
 - **Artificial Intelligence (AI): The Outer Circle (The Big Idea)** This is the entire, all-encompassing concept of creating intelligent machines, first dreamed up in the 1950s. Any machine or program that exhibits some form of intelligence falls under the broad umbrella of AI.
