--- a/aifundamentals/module1/page2.mdx
+++ b/aifundamentals/module1/page2.mdx
@@ -4,11 +4,26 @@ title: "A Brief Hystory of AI"
 
 The story of Artificial Intelligence isn't a straight line of progress. It's a fascinating journey filled with brilliant ideas, periods of intense excitement, and frustrating setbacks. Understanding this history helps us appreciate why AI is exploding in popularity today.
 
+<img
+  src="/images/aifundamentals/img3.png"
+  alt="Img3 Pn"
+  title="Img3 Pn"
+  style={{ width:"100%" }}
+/>
+
 ## The Birth of an Idea (The 1950s)
 
 While the dream of creating artificial beings is ancient, the scientific journey began in the mid-20th century.
 
 - **Alan Turing & The Turing Test (1950):** The story of modern AI really starts with British mathematician Alan Turing. He proposed a simple but profound idea called the "Imitation Game," which later became known as the **Turing Test**. The test is a way to determine if a machine can exhibit intelligent behavior indistinguishable from that of a human.
+
+  <img
+    src="/images/image.png"
+    alt="Image Pn"
+    title="Image Pn"
+    className="mx-auto"
+    style={{ width:"49%" }}
+  />
   - **The Setup:** A human judge engages in a natural language conversation with two other parties, one a human and the other a machine. If the judge cannot reliably tell which is which, the machine is said to have passed the test.
 - **The Dartmouth Workshop (1956):** A few years later, a group of pioneering researchers gathered for a summer workshop at Dartmouth College. It was here that computer scientist **John McCarthy coined the term "Artificial Intelligence."** They shared a bold conviction: that "every aspect of learning or any other feature of intelligence can in principle be so precisely described that a machine can be made to simulate it." This event marked the official birth of AI as a formal field of research.
 
