--- a/aifundamentals/module1/page2.mdx
+++ b/aifundamentals/module1/page2.mdx
@@ -18,11 +18,11 @@ While the dream of creating artificial beings is ancient, the scientific journey
 - **Alan Turing & The Turing Test (1950):** The story of modern AI really starts with British mathematician Alan Turing. He proposed a simple but profound idea called the "Imitation Game," which later became known as the **Turing Test**. The test is a way to determine if a machine can exhibit intelligent behavior indistinguishable from that of a human.
 
   <img
-    src="/images/image.png"
-    alt="Image Pn"
-    title="Image Pn"
+    src="/images/aifundamentals/img2.png"
+    alt="Img2 Pn"
+    title="Img2 Pn"
     className="mx-auto"
-    style={{ width:"49%" }}
+    style={{ width:"56%" }}
   />
   - **The Setup:** A human judge engages in a natural language conversation with two other parties, one a human and the other a machine. If the judge cannot reliably tell which is which, the machine is said to have passed the test.
 - **The Dartmouth Workshop (1956):** A few years later, a group of pioneering researchers gathered for a summer workshop at Dartmouth College. It was here that computer scientist **John McCarthy coined the term "Artificial Intelligence."** They shared a bold conviction: that "every aspect of learning or any other feature of intelligence can in principle be so precisely described that a machine can be made to simulate it." This event marked the official birth of AI as a formal field of research.
