Documentation edits made through Mintlify web editor

--- a/aifundamentals/module1/page3.mdx
+++ b/aifundamentals/module1/page3.mdx
@@ -4,7 +4,7 @@ title: "Types of AI"
 
 Not all AI is created equal. To understand the landscape of AI, it helps to categorize it based on what it's capable of and how it functions. We can break this down into two main classification systems.
 
-### Classification 1: Based on Capability (The "Power Level")
+## Classification 1: Based on Capability (The "Power Level")
 
 This is the most common way to think about AI, categorizing it by its level of intelligence, from highly specialized to vastly superhuman. Think of it like the evolution of a species or leveling up in a video game.
 
@@ -34,7 +34,7 @@ This is the final, theoretical stage of AI development.
 - **Think about:** An ASI wouldn't just be a faster thinker; it would be a _better_ thinker, capable of making discoveries and inventions far beyond our comprehension. Its rise would be one of the most transformative events in human history.
 - **Current Status:** ASI is purely **hypothetical**.
 
-### Classification 2: Based on Functionality (The "How it Thinks" Model)
+## Classification 2: Based on Functionality (The "How it Thinks" Model)
 
 This system categorizes AI based on its ability to perceive the world and use that information.
 
